testsuite/tests/warnings/should_fail/CaretDiagnostics1.stderr
CaretDiagnostics1.hs:7:8-15: error: [GHC-83865]
    • Couldn't match expected type ‘IO a0’ with actual type ‘Int’
    • In the second argument of ‘(+)’, namely ‘(3 :: Int)’
      In the expression:
        10000000000000000000000000000000000000 + 2 + (3 :: Int)
      In the expression:
        do 10000000000000000000000000000000000000 + 2 + (3 :: Int)
           pure ("this is not an IO" + ())
  |
7 |       (3 :: Int)
  |        ^^^^^^^^

CaretDiagnostics1.hs:8:9-27: error: [GHC-83865]
    • Couldn't match type ‘[Char]’ with ‘()’
      Expected: ()
        Actual: String
    • In the first argument of ‘(+)’, namely ‘"this is not an IO"’
      In the first argument of ‘pure’, namely
        ‘("this is not an IO" + ())’
      In a stmt of a 'do' block: pure ("this is not an IO" + ())
  |
8 |   pure ("this is not an IO" + (            ))
  |         ^^^^^^^^^^^^^^^^^^^

CaretDiagnostics1.hs:13:7-11: error: [GHC-83865]
    • Couldn't match type: a1 -> a1
                     with: [Char]
      Expected: a1 -> a1
        Actual: String
    • In the pattern: "γηξ"
      In a case alternative: "γηξ" -> () '0'
      In the expression: case id of "γηξ" -> () '0'
   |
13 |       "γηξ" -> (
   |       ^^^^^

CaretDiagnostics1.hs:(13,16)-(14,13): error: [GHC-83865]
    • Couldn't match expected type ‘Char -> t0’ with actual type ‘()’
    • The function ‘()’ is applied to one visible argument,
        but its type ‘()’ has none
      In the expression: () '0'
      In a case alternative: "γηξ" -> () '0'
   |
13 |       "γηξ" -> (
   |                ^...

CaretDiagnostics1.hs:17:7-8: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘()’
    • In the expression: ()
      In an equation for ‘fóo’: fóo = ()
   |
17 | fóo = ()
   |       ^^

CaretDiagnostics1.hs:20:17-18: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘()’
    • In the expression: ()
      In an equation for ‘tabby’: tabby = ()
   |
20 | tabby =         ()
   |                 ^^

CaretDiagnostics1.hs:23:25-26: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘()’
    • In the expression: ()
      In an equation for ‘tabby2’: tabby2 = ()
   |
23 | tabby2 =                ()
   |                         ^^

